# earthMockServer

./: .dockerignore  .env.example  .gitignore  DIFY_NPC_CHATFLOW_GUIDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  internal.py  messages.py  persona.py  story.py  world.py
app/core/: config.py  security.py
app/db/: base.py  init_db.py
app/models/: __init__.py  message.py  npc_session.py  persona.py  story.py  user.py  world.py
app/schemas/: auth.py  internal.py  message.py  persona.py  story.py  world.py
app/services/: ai_service.py  auth_service.py  dify_chat_service.py  message_service.py  npc_profiles.py  persona_service.py  scheduler.py  story_service.py  world_service.py
docs/: mother_npc_chatflow.md
docs/dify/: README.md  mother_chatflow_setup.md
docs/dify/test_inputs/: mother_chat_messages_payload.json  mother_inputs_object.json
earth_mock_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py  test_health.py  test_security.py
