[project]
name = "earth-mock-server"
version = "0.1.0"
description = "FastAPI backend for a life-sim social game with AI-driven NPC messaging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "bcrypt>=4.0.1,<6.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.1",
    "psycopg[binary]>=3.2.3",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
